# storage-gateway-service-dashboard

./: .gitignore  .gitreview  HACKING.rst  MANIFEST.in  README.md  babel-django.cfg  babel-djangojs.cfg  manage.py  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py
storage_gateway_dashboard/: __init__.py  dashboard.py  version.py  views.py
storage_gateway_dashboard/api/: api.py
storage_gateway_dashboard/backups/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
storage_gateway_dashboard/checkpoints/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
storage_gateway_dashboard/common/: fields.py  table.py
storage_gateway_dashboard/enabled/: _7000_storage_gateway.py  _7010_storage_gateway_volume.py  _7020_storage_gateway_snapshot.py  _7030_storage_gateway_backup.py  _7040_storage_gateway_replication.py  _7050_storage_gateway_checkpoint.py
storage_gateway_dashboard/replications/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
storage_gateway_dashboard/snapshots/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
storage_gateway_dashboard/templates/backups/: _create_backup.html  _detail_overview.html  create_backup.html  restore_backup.html
storage_gateway_dashboard/templates/checkpoints/: _detail_overview.html  _update.html  update.html
storage_gateway_dashboard/templates/replications/: _create.html  (+8 more)
storage_gateway_dashboard/test/: fake.py
storage_gateway_dashboard/volumes/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
tools/: install_venv.py  with_venv.sh
(+15 files in other folders)
